[gd_scene load_steps=8 format=3 uid="uid://yj2uuvm0wbny"]

[ext_resource type="Script" path="res://Game/game_menu.gd" id="1_ng2vu"]
[ext_resource type="FontFile" uid="uid://dy7m3vcq7d60c" path="res://Resources/1Main/Fonts/montserrat.regular.ttf" id="2_hspni"]
[ext_resource type="PackedScene" uid="uid://dx0n1bqkmta13" path="res://Game/Save.tscn" id="3_fdpa7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bultt"]
bg_color = Color(0.796078, 0.741176, 0.8, 0.482353)
corner_radius_top_left = 16

[sub_resource type="FontVariation" id="FontVariation_r6rcn"]
base_font = ExtResource("2_hspni")
variation_transform = Transform2D(1, 0.161, 0, 1, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tyu4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3pyp"]

[node name="game_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ng2vu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bultt")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.306
anchor_right = 0.214
anchor_bottom = 0.705
offset_left = 0.0399952
offset_top = 2.51997
offset_right = -23.88
offset_bottom = -10.4
grow_vertical = 2
scale = Vector2(1.07488, 1.02381)
theme_override_constants/separation = 5

[node name="Main Menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.270588, 0.407843, 0.556863, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_colors/font_hover_color = Color(0.223529, 0.345098, 0.478431, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_r6rcn")
theme_override_font_sizes/font_size = 48
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tyu4e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3pyp")
text = "MAIN MENU"
flat = true

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.270588, 0.407843, 0.556863, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_colors/font_hover_color = Color(0.223529, 0.345098, 0.478431, 1)
theme_override_colors/font_focus_color = Color(0.160784, 0.262745, 0.368627, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_r6rcn")
theme_override_font_sizes/font_size = 46
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tyu4e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3pyp")
text = "SAVE"
flat = true

[node name="Load" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.270588, 0.407843, 0.556863, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_colors/font_hover_color = Color(0.223529, 0.345098, 0.478431, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_r6rcn")
theme_override_font_sizes/font_size = 46
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tyu4e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3pyp")
text = "LOAD"
flat = true

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.270588, 0.407843, 0.556863, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_colors/font_hover_color = Color(0.223529, 0.345098, 0.478431, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_r6rcn")
theme_override_font_sizes/font_size = 46
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tyu4e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3pyp")
text = "SETTINGS"
flat = true

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.270588, 0.407843, 0.556863, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_colors/font_hover_color = Color(0.223529, 0.345098, 0.478431, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_r6rcn")
theme_override_font_sizes/font_size = 46
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tyu4e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3pyp")
text = "CREDITS"
flat = true

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.270588, 0.407843, 0.556863, 1)
theme_override_colors/font_pressed_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_colors/font_hover_color = Color(0.223529, 0.345098, 0.478431, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.298039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("FontVariation_r6rcn")
theme_override_font_sizes/font_size = 46
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tyu4e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3pyp")
text = "QUIT"
flat = true

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229
anchor_top = 0.5
anchor_right = 0.229
anchor_bottom = 0.5
offset_left = 0.319967
offset_top = -280.0
offset_right = 8.31997
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.258824, 0.47451, 0.509804)

[node name="SavePicker" parent="Panel" instance=ExtResource("3_fdpa7")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_right = 0.992
anchor_bottom = 0.998
offset_left = 0.199982
offset_top = 4.99999
offset_right = 4.35992
offset_bottom = 0.159972

[connection signal="pressed" from="Panel/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="load_clicked" from="Panel/SavePicker" to="." method="_on_save_picker_load_clicked"]
[connection signal="save_clicked" from="Panel/SavePicker" to="." method="_on_save_picker_save_clicked"]
